syntax = "proto3";

package transaction;

option go_package = "server/internal/infrastructure/messaging/dto";

enum SplitType {
  Equal = 0;
  Percentage = 1;
  Share = 2;
}

message TransactionGroupMember {
  string email = 1;
  string name = 2;
  optional uint32 splitValue = 3;
  bool joined = 4;
}

message TransactionGroup {
  uint32 id = 1;
  string name = 2;
  string initial_currency = 3;
  SplitType splitType = 4;
  repeated TransactionGroupMember members = 5;
  optional uint32 currency = 6;
  optional uint32 category = 7;
  bool hidden = 8;
}

message GetAllTransactionGroupsRequest {
}

message GetAllTransactionGroupsResponse {
  repeated TransactionGroup transactionGroups = 1;
}

message CreateTransactionGroupRequest {
  string name = 1;
  string initial_currency = 2;
  SplitType splitType = 3;
  uint32 currency = 4;
  uint32 category = 5;
}

message CreateTransactionGroupResponse {
  uint32 id = 1;
}

message UpdateGroupMemberFields {
  string email = 1;
  optional uint32 splitValue = 3;
}

message UpdateTransactionGroupFields {
  optional string name = 1;
  optional SplitType splitType = 2;
  optional uint32 currency = 3;
  optional uint32 category = 4;
  repeated UpdateGroupMemberFields members = 5;
  optional bool hidden = 6;
}

message UpdateTransactionGroupRequest {
  uint32 id = 1;
  UpdateTransactionGroupFields fields = 2;
}

message UpdateTransactionGroupResponse {
}

service TransactionGroupService {
  rpc GetAllTransactionGroups (GetAllTransactionGroupsRequest) returns (GetAllTransactionGroupsResponse);
  rpc CreateTransactionGroup (CreateTransactionGroupRequest) returns (CreateTransactionGroupResponse);
  rpc UpdateTransactionGroup (UpdateTransactionGroupRequest) returns (UpdateTransactionGroupResponse);
}